deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authex
  template:
    metadata:
      labels:
        app: authex
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/noandrea/authex:latest
          imagePullPolicy: Always
          name: application
          ports:
            - name: rest
              containerPort: 2306
          readinessProbe:
            httpGet:
              port: rest
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 20000
            runAsGroup: 20000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: keystore
              mountPath: /keystore
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        # NOTE: this is a temporary volume, it should be replaced with a secret or a persistent volume
        - name: keystore
          emptyDir:
            sizeLimit: 50Mi

---
## Deployment for the authex postgres database
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authex-db
spec:
  selector:
    matchLabels:
      app: authex-db
  replicas: 1
  template:
    metadata:
      labels:
        app: authex-db
    spec:
      containers:
        - name: authex-db
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
      volumes:
        - name: postgres-storage
          emptyDir: {}
